--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "sdm",
-  "version": "1.0.0",
+  "version": "0.1.3",
   "description": "CSS compiler for the Sdm system",
   "scripts": {
     "build": "sass src/scss/sdm.scss css/sdm.css --style=expanded --no-source-map",
     "watch": "sass src/scss/sdm.scss css/sdm.css --style=expanded --source-map --watch",
-    "format": "prettier --write \"**/*.{js,mjs,html,hbs,json,css}\""
+    "format": "prettier --write \"**/*.{js,mjs,html,hbs,json,css}\"",
+    "package": "node zipBuild.js"
   },
   "browserslist": [
     "last 3 versions"
@@ -14,11 +15,9 @@
   "license": "MIT",
   "private": true,
   "devDependencies": {
+    "archiver": "^7.0.1",
     "prettier": "^3.6.2",
     "prettier-plugin-handlebars": "^0.0.1",
     "sass": "^1.53.0"
-  },
-  "dependencies": {
-    "uuid": "^11.1.0"
   }
 }
