fix: :bug: Fix .gitignore for foundry db files

--- a/.gitignore
+++ b/.gitignore
@@ -14,9 +14,5 @@ node_modules/
 .DS_Store
 
 # Foundry DB Files
-packs/**/*.ldb
-packs/**/*.log
-packs/**/LOCK
-packs/**/LOG*
-packs/**/CURRENT
-packs/**/MANIFEST*
+packs/*
+!packs/_source/
