feat: :truck: Move utility scripts to utils folder

--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "build": "sass src/scss/sdm.scss css/sdm.css --style=expanded --no-source-map",
     "watch": "sass src/scss/sdm.scss css/sdm.css --style=expanded --source-map --watch",
     "format": "prettier --write \"**/*.{js,mjs,html,hbs,json,css}\"",
-    "zip": "node zipBuild.js",
-    "clean:packs": "node cleanPacks.js",
-    "pack": "node pack.js",
-    "unpack": "node unpack.js",
+    "zip": "node utils/zipBuild.js",
+    "clean:packs": "node utils/cleanPacks.js",
+    "pack": "node utils/pack.js",
+    "unpack": "node utils/unpack.js",
     "repack": "npm run clean:packs && npm run pack"
   },
   "browserslist": [
