ci: :construction_worker: Add step to publish module to foundryvtt website

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -187,9 +187,9 @@ jobs:
           **Installation:** To manually install this release, please use the following manifest URL: ${{ env.RELEASE_INSTALL_URL }}
 
     # Publish update to Foundry Admin interface via API
-    # - name: Publish Module to FoundryVTT Website
-    #   id: publish-to-foundry-website
-    #   uses: cs96and/FoundryVTT-release-package@v1.0.1
-    #   with:
-    #     package-token: ${{ secrets.PACKAGE_TOKEN }}
-    #     manifest-url: https://github.com/${{ github.repository }}/releases/download/$TAG/$PACKAGE_TYPE.json
+    - name: Publish Module to FoundryVTT Website
+      id: publish-to-foundry-website
+      uses: cs96and/FoundryVTT-release-package@v1.0.3
+      with:
+        package-token: ${{ secrets.PACKAGE_TOKEN }}
+        manifest-url: https://github.com/${{ github.repository }}/releases/download/$TAG/$PACKAGE_TYPE.json
