--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -189,7 +189,7 @@ jobs:
     # Publish update to Foundry Admin interface via API
     - name: Publish Module to FoundryVTT Website
       id: publish-to-foundry-website
-      uses: cs96and/FoundryVTT-release-package@v1.0.3
+      uses: cs96and/FoundryVTT-release-package@v1.0.1
       with:
         package-token: ${{ secrets.PACKAGE_TOKEN }}
-        manifest-url: https://github.com/${{ github.repository }}/releases/download/$TAG/$PACKAGE_TYPE.json
+        manifest-url: https://github.com/${{github.repository}}/releases/download/${{github.event.release.tag_name}}/system.json
