--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -192,4 +192,4 @@ jobs:
       uses: cs96and/FoundryVTT-release-package@v1.0.1
       with:
         package-token: ${{ secrets.PACKAGE_TOKEN }}
-        manifest-url: https://github.com/${{github.repository}}/releases/download/${{github.event.release.tag_name}}/system.json
+        manifest-url: ${{ env.RELEASE_INSTALL_URL }}
