--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -150,18 +150,11 @@ jobs:
             ...(manifest.includes ?? [])
           ];
 
-          includes = includes.filter(i =>
-            typeof i === "string" &&
-            !i.startsWith("packs/_source/") &&
-            i !== "packs/_source/"
-          );
-
           return includes.join(" ");
 
 
     - name: Zip package
-      run: zip ${{ env.ZIP_NAME }} -r ${{ steps.archive.outputs.result }}
-
+      run: zip -r "${{ env.ZIP_NAME }}" "${{ steps.archive.outputs.result }}" -x "packs/_source/*" "packs/_source/"
 
     - name: Fetch Release Body
       id: release
