fix: :rotating_light: Fix lint issues

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -5,10 +5,15 @@
     "paths": {
       "@client/*": ["./foundry/client/*"],
       "@common/*": ["./foundry/common/*"]
-    },
+    }
   },
   "exclude": ["node_modules", "**/node_modules/*"],
-  "include": ["module/sdm.mjs", "foundry/client/client.mjs", "foundry/client/global.d.mts", "foundry/common/primitives/global.d.mts"],
+  "include": [
+    "module/sdm.mjs",
+    "foundry/client/client.mjs",
+    "foundry/client/global.d.mts",
+    "foundry/common/primitives/global.d.mts"
+  ],
   "typeAcquisition": {
     "include": ["jquery"]
   }
