--- a/.editorconfig
+++ b/.editorconfig
@@ -14,6 +14,9 @@ indent_size = 2
 [*.md]
 trim_trailing_whitespace = false
 
+[*.{hbs,html,svg}]
+insert_final_newline = false
+
 [*.json]
 indent_size = 2
 
@@ -28,3 +31,5 @@ indent_size = 2
 
 [*.css]
 indent_size = 2
+
+
