--- a/packs-source/equipment/Distraction_Projector_6HjpFxDWSfTnd3pq.json
+++ b/packs-source/equipment/Distraction_Projector_6HjpFxDWSfTnd3pq.json
@@ -8,7 +8,7 @@
     "readied": false,
     "cost": 100,
     "cost_frequency": "",
-    "description": "<p>Holographic. Short range, re 3</p>",
+    "description": "<p>Holographic. Short range, re 3 [[/r 1d20]]</p>",
     "quantity": 1,
     "size": {
       "value": 1,
