--- a/packs-source/equipment/Transfer_Gun_eXPPiplEN17nnx5N.json
+++ b/packs-source/equipment/Transfer_Gun_eXPPiplEN17nnx5N.json
@@ -8,7 +8,7 @@
     "readied": false,
     "cost": 300,
     "cost_frequency": "",
-    "description": "<p>Originally a medical device. It transfers a burden from the user to the target (save).</p><p><strong>Features:</strong> short, re 5, attune, oldtech</p>",
+    "description": "<p>Originally a medical device. It transfers a burden from the user to the target (save).</p><p><strong>Features:</strong> short, re 5 [[/r 1d20]], attune, oldtech</p>",
     "quantity": 1,
     "size": {
       "value": 1,
