--- a/packs-source/traits/1__Competent_Appearance_aBkyepOEFWO84SFq.json
+++ b/packs-source/traits/1__Competent_Appearance_aBkyepOEFWO84SFq.json
@@ -1,16 +1,16 @@
 {
   "folder": "S5wPQyYpj6Hth8p4",
-  "name": "6.  Numbers Maximization Official",
+  "name": "1. Competent Appearance",
   "type": "trait",
-  "_id": "vYPcdjvXNQSgSdYL",
-  "img": "icons/sundries/misc/admission-ticket-grey.webp",
+  "_id": "aBkyepOEFWO84SFq",
+  "img": "icons/skills/social/thumbsup-approval-like.webp",
   "system": {
     "readied": false,
     "status": "",
     "resources": "",
     "cost": 0,
     "cost_frequency": "",
-    "description": "<p>You mastered the popular human game of “numbers go up.” Spend 1 life to add [[/r 1d6]] to a roll, but the result is your chance of a critical failure on your next roll</p>",
+    "description": "<p>You always appear competent when appearing to do something that could appear to be your job.</p>",
     "quantity": 1,
     "size": {
       "value": 1,
@@ -73,9 +73,9 @@
     "coreVersion": "13.350",
     "systemId": "sdm",
     "systemVersion": "0.4.5",
-    "createdTime": 1760204667380,
-    "modifiedTime": 1760207268030,
+    "createdTime": 1760204260598,
+    "modifiedTime": 1760204291798,
     "lastModifiedBy": "XnQAppzUXfkn5LcX"
   },
-  "_key": "!items!vYPcdjvXNQSgSdYL"
+  "_key": "!items!aBkyepOEFWO84SFq"
 }
