--- a/packs-source/traits/4__Phylake_s_Child_h99nx1GKYqWZdFX1.json
+++ b/packs-source/traits/4__Phylake_s_Child_h99nx1GKYqWZdFX1.json
@@ -1,16 +1,16 @@
 {
-  "folder": "gbxTC0v879hgS8TX",
-  "name": "1.  Country Squire",
+  "folder": "8AYyfRvJaxotOYXS",
+  "name": "4. Phylake’s Child",
   "type": "trait",
-  "_id": "k9uMPzSIOfdV1YMn",
-  "img": "icons/commodities/currency/coins-assorted-mix-silver.webp",
+  "_id": "h99nx1GKYqWZdFX1",
+  "img": "icons/creatures/unholy/demon-horned-winged-laughing.webp",
   "system": {
     "readied": false,
     "status": "",
     "resources": "",
     "cost": 0,
     "cost_frequency": "",
-    "description": "<p>You make money the proper way: resource concessions in the vastlands and the ruinlands. A remote rural estate gives you €15/wk and all the spite olives you can spit.</p>",
+    "description": "<p>They say your parent was a witch who seduced a holy guardian—an angel-demon called a phylake by scholars. Daemons talk to you and see you as one of their own.</p>",
     "quantity": 1,
     "size": {
       "value": 1,
@@ -73,9 +73,9 @@
     "coreVersion": "13.350",
     "systemId": "sdm",
     "systemVersion": "0.4.5",
-    "createdTime": 1760201121379,
-    "modifiedTime": 1760201171447,
+    "createdTime": 1760203640829,
+    "modifiedTime": 1760203674231,
     "lastModifiedBy": "XnQAppzUXfkn5LcX"
   },
-  "_key": "!items!k9uMPzSIOfdV1YMn"
+  "_key": "!items!h99nx1GKYqWZdFX1"
 }
