--- a/packs-source/weapons/Burdenbeast_Whip_kCKLugHtUzZOyDVq.json
+++ b/packs-source/weapons/Burdenbeast_Whip_kCKLugHtUzZOyDVq.json
@@ -8,13 +8,15 @@
     "readied": false,
     "cost": 3,
     "cost_frequency": "",
-    "description": "<p>Can be used to swing.</p><p><strong>Features: </strong>str or agi, reach</p>",
+    "description": "<p>Can be used to swing. Attack with <strong>str</strong> or <strong>agi</strong>.</p>",
     "quantity": 1,
     "size": {
       "value": 1,
       "unit": "stones"
     },
-    "features": [],
+    "features": [
+      "reach"
+    ],
     "attributes": {
       "initiative": "",
       "level": 0,
@@ -89,10 +91,10 @@
     "exportSource": null,
     "coreVersion": "13.351",
     "systemId": "sdm",
-    "systemVersion": "0.5.4",
+    "systemVersion": "0.10.0",
     "createdTime": 1767011718611,
-    "modifiedTime": 1767011718611,
-    "lastModifiedBy": "9g1Dzw4zdMZGGuY3"
+    "modifiedTime": 1771501464904,
+    "lastModifiedBy": "6nG6apxhfcD63CwQ"
   },
   "_key": "!items!kCKLugHtUzZOyDVq"
 }
