--- a/packs-source/weapons/Transfer_Gun_eXPPiplEN17nnx5N.json
+++ b/packs-source/weapons/Transfer_Gun_eXPPiplEN17nnx5N.json
@@ -8,13 +8,17 @@
     "readied": false,
     "cost": 300,
     "cost_frequency": "",
-    "description": "<p>Originally a medical device. It transfers a burden from the user to the target (save).</p><p><strong>Features:</strong> short, re 5 [[/r 1d20]], attune, oldtech</p>",
+    "description": "<p>Originally a medical device. It transfers a burden from the user to the target (save).</p>",
     "quantity": 1,
     "size": {
       "value": 1,
       "unit": "stones"
     },
-    "features": [],
+    "features": [
+      "attune",
+      "oldtech",
+      "replenish"
+    ],
     "attributes": {
       "initiative": "",
       "level": 0,
@@ -74,7 +78,10 @@
     "starting_kit": false,
     "packed_remaining_items": 10,
     "is_supply": false,
-    "supply_type": "human"
+    "supply_type": "human",
+    "replenish": {
+      "value": 5
+    }
   },
   "effects": [],
   "sort": 400000,
@@ -89,10 +96,10 @@
     "exportSource": null,
     "coreVersion": "13.351",
     "systemId": "sdm",
-    "systemVersion": "0.5.4",
+    "systemVersion": "0.10.0",
     "createdTime": 1767011726802,
-    "modifiedTime": 1767011726802,
-    "lastModifiedBy": "9g1Dzw4zdMZGGuY3"
+    "modifiedTime": 1771502284165,
+    "lastModifiedBy": "6nG6apxhfcD63CwQ"
   },
   "_key": "!items!eXPPiplEN17nnx5N"
 }
